--- a/app/src/main/res/navigation/nav_graph_application.xml
+++ b/app/src/main/res/navigation/nav_graph_application.xml
@@ -6,7 +6,7 @@
     app:startDestination="@id/f_main">
     <fragment
         android:id = "@+id/f_main"
-        android:name="com.example.mobiles4.MainFragment"
+        android:name="com.example.mobiles4.UI.MainFragment"
         android:label="main"
         tools:layout="@layout/fragment_main">
         <action
@@ -15,15 +15,36 @@
         <action
             android:id="@+id/a_right"
             app:destination="@id/f_right" />
+        <action
+            android:id="@+id/a_statistics"
+            app:destination="@id/f_statistics" />
     </fragment>
     <fragment
         android:id = "@+id/f_left"
-        android:name="com.example.mobiles4.LeftFragment"
+        android:name="com.example.mobiles4.UI.LeftFragment"
         android:label="left"
-        tools:layout="@layout/fragment_left"/>
+        tools:layout="@layout/fragment_left">
+        <action
+            android:id="@+id/a_answer"
+            app:destination="@id/f_answer" />
+    </fragment>
     <fragment
         android:id = "@+id/f_right"
-        android:name="com.example.mobiles4.RightFragment"
+        android:name="com.example.mobiles4.UI.RightFragment"
         android:label="right"
-        tools:layout="@layout/fragment_right"/>
+        tools:layout="@layout/fragment_right">
+        <action
+            android:id="@+id/a_answer"
+            app:destination="@id/f_answer" />
+    </fragment>
+    <fragment
+        android:id = "@+id/f_answer"
+        android:name="com.example.mobiles4.UI.AnswerFragment"
+        android:label="answer"
+        tools:layout="@layout/fragment_answer"/>
+    <fragment
+        android:id = "@+id/f_statistics"
+        android:name="com.example.mobiles4.UI.AddTaskFragment"
+        android:label="answer"
+        tools:layout="@layout/fragment_add_task"/>
 </navigation>
